--- a/summaries/Website/patient_report_feb_2019.Rmd
+++ b/summaries/Website/patient_report_feb_2019.Rmd
@@ -3087,6 +3087,62 @@ style(L1J_fdg, text = L1J_text, hoverinfo = "text", traces = 1)
 
 <br />
 
+##### L1-J Timeline
+
+<font size="0.6">
+<ul>
+  <li>Use the mouse wheel to zoom in and out.</li>
+  <li>Click and drag the timeline to scroll through the dates (The red line shows today's date).</li>
+</ul>
+</font>
+
+<br />
+
+```{r L1J_timeline, out.width="100%", fig.height=2.4}
+library(timevis)
+library(dplyr)
+
+L1J_timeline <- data.frame(
+  id = 1:4,
+  content = c("1st",
+              rep("CT Scan", 1),
+              rep("CEA", 1),
+              rep("CA 19-9", 1)),
+  
+  start = c("2018-08-13",
+            "2018-04-12",
+            "2018-08-25",
+            "2018-08-25"),
+  
+  end   = c("2018-09-07",
+            NA,
+            NA,
+            NA),
+  
+  group = c(rep(NA, 1), rep("img", 1), rep("blood", 2)),
+  
+  type = c(rep("background", 1), rep("point", 3))
+)
+
+L1J_groups <- data.frame(
+  id = c("session", "img", "blood"),
+  content = c("Session", "Imaging Tests", "Blood Tests")
+)
+
+timevis(data = L1J_timeline, groups = L1J_groups, showZoom = FALSE, zoomFactor = 0.2, options = list(zoomable = TRUE, min = "2018-04-01", max = "2019-04-01", start = "2018-04-01", end  = "2019-04-01", zoomMin = 1080000000))
+```
+
+<br>
+<div align="right">
+<i>
+<font size="1">
+* <b>CT Scans</b> refer to Abdominal and Pelvic CT Scans.
+<br />
+* <b>CEA</b> refers to a Carcinoembryonic Antigen Test.
+</font>
+</i>
+</div>
+
 *****
 
 #### Significant Changes
